--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=CI
+sonar.projectKey=demo
+sonar.projectName=demo
+sonar.projectVersion=1.0
+sonar.language=java
+sonar.sources=src/main/java
+sonar.tests=src/test/java
+sonar.java.binaries=build/classes
+sonar.sourceEncoding=UTF-8
+sonar.host.url=http://localhost:9000
+sonar.login=sqp_75c868fb39bb4636172c5f8b050dc3af5e9dbee0
+sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
